<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tvshow.TvShowFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tv_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_catalogue" />

    <ImageView
        android:id="@+id/empty_tv_show"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:src="@drawable/empty"
        android:visibility="gone"
        android:layout_gravity="center"
        android:contentDescription="@string/image_empty" />

    <ProgressBar
        android:id="@+id/progress_bar_tv_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</FrameLayout>