<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_language"
        android:icon="@drawable/ic_baseline_language_24"
        android:title="@string/change_language"
        app:showAsAction="ifRoom" />
</menu>